crates/plotnik-tests/tests/04-emit/types/captures/unrelated_same_name_union_conflict_keeps_capture_type_warning.txt
Q = [
  {
    {
      {
        (identifier) @id
      } @x :: str
    } @row
    (identifier) @x
  }
  {
    (identifier) @other
  } @x
]
------------------ DIAGNOSTICS -------------------
warning: capture type `str` replaces structured data with source text
 --> query.ptk:6:12
  |
6 |       } @x :: str
  |            ^^^^^^
  |
help: the replaced fields, cases, or scalar payload will not be returned

error: capture `@x` has incompatible types across branches
  --> query.ptk:8:18
   |
 8 |     (identifier) @x
   |                  ^^
...
12 |   } @x
   |     -- and a different type here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
